[package]
name = "windows-internals"
version = "0.1.0"
edition = "2024"
authors = ["Guap Codes"]
description = "A Rust exploration of Windows Processes, Threads, and Jobs"
license = "MIT"
repository = "https://github.com/guap-codes/windows-internals"

[[bin]]
name = "windows-internals"
path = "src/main.rs"

[dependencies]
thiserror = "2.0.18"
clap = { version = "4.5.60", features = ["derive"] }
owo-colors = "4.0"
anyhow = "1.0"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_System_Com", 
    "Win32_System_Com_Marshal",
]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
